# CRS-Gridded-Geodetic-data-eXchange-Format

./: .gitignore  README.md  editor_guidance.adoc
scripts/: GGXF.py  NOTES  README.md  deformation_model_to_ggxf_yaml.py  garbage  gdal_to_ggxf_grid_headers.py  ggxf.py  ggxf_yaml_to_netcdf4.py  pyproject.toml
scripts/GGXF/: App.py  AttributeValidator.py  Constants.py  GGXF.py  GGXF_Types.py  GdalImport.py  NetCDF.py  TimeFunction.py  YAML.py  __main__.py  gdal_driver_parameters.yaml
scripts/GGXF/GridLoader/: CSV.py  GDAL.py  ggxf-csv.py  ggxf_csv.py
scripts/docker/: Dockerfile  build  run
scripts/schema/: compile_schema.sh  ggxf_content_types.yaml  ggxf_schema.yaml  schema_yaml_to_py.py
scripts/tests/: DummyGGXF.py  testCsvLoader.py  testGdalLoader.py  testInterpolation.py  testTimeFunction.py
scripts/tests/data/: test.csv
scripts/tests/data/deformationModel/: def2-nationalverticalvelocitygrid01.csv  def2-nearfielddeformationgrid01.csv  def2.csv  def2.yaml  def_gdal-farfielddeformationgrid01.tif  def_gdal-nationalverticalvelocitygrid01.tif  def_gdal-nearfielddeformationgrid01.tif  def_packed.cdl  deformation-grids.csv  deformation-out-farfielddeformationgrid01.csv  deformation-out.yaml  (+3 more)
scripts/tests/regression/: 01-yaml-inline-io.test  02-yaml-inline-to-csv.test  03-yaml-inline-to-netcdf.test  04-yaml-with-csv.test  05-yaml-gdal-load.test  06-netcdf-io.test  07-calc-geoid.test  README.md  garbage-geoid_grid01.csv  garbage.yaml  regression_test.sh
scripts/tests/unit/: testCsvLoader.py  testGdalLoader.py  testInterpolation.py  testTimeFunction.py
(+281 files in other folders)
